# FairyScheduler

./: .gitignore  CMakeLists.txt  DESIGN.md  FairScheduler  README.md  Schedule_seed.csv  Schedule_seed_4.csv  Schedule_seed_4_result.csv  Schedule_seed_5_result.csv  Schedule_seed_Shift_6.csv
FairScheduler.dSYM/Contents/: Info.plist
FairScheduler.dSYM/Contents/Resources/DWARF/: FairScheduler
FairScheduler.dSYM/Contents/Resources/Relocations/aarch64/: FairScheduler.yml
include/: csv_io.h  csv_loader.h  employee.h  ga_engine.h  schedule_config.h  shift_type.h  shiftset_config.h
src/: csv_io.c  csv_loader.c  ga_engine.c  main.c  mock_data.c  schedule_config.c  shift_type.c
